--- a/temu_modelo_final.ipynb
+++ b/temu_modelo_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "73c536c3",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "d3fd548c",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "f20a624f",
    "metadata": {},
    "outputs": [
@@ -1031,6 +1031,351 @@
    "source": [
     "-------------"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4b694bf",
+   "metadata": {},
+   "source": [
+    "# Reporte Automatizacion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bfaa9339",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "====================== RESULTADOS DE EXPERIMENTOS (ordenado por PR-AUC VALID) ======================\n",
+      "                     exp   primeruso  clip_ultimo  valid_pr_auc  valid_roc_auc  valid_brier  train_pr_auc  train_roc_auc\n",
+      "   mantener__clip_ultimo    mantener         True      0.756547       0.870612     0.117141      0.745563       0.884077\n",
+      "clip_a_vinc__clip_ultimo clip_a_vinc         True      0.755922       0.870066     0.117397      0.747341       0.883777\n",
+      "   poner_na__clip_ultimo    poner_na         True      0.755392       0.870729     0.117097      0.744647       0.883514\n"
+     ]
+    }
+   ],
+   "source": [
+    "exp_df = pd.DataFrame(exp_results).sort_values([\"valid_pr_auc\",\"valid_roc_auc\"], ascending=False)\n",
+    "print(\"\\n====================== RESULTADOS DE EXPERIMENTOS (ordenado por PR-AUC VALID) ======================\")\n",
+    "print(exp_df.to_string(index=False))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fe8806a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Guardar resumen de experimentos\n",
+    "exp_df.to_csv(ARTIF_DIR/\"experiments_summary.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a4da74e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[GANANCIA/LIFT por top-k%]\n",
+      "  top_%  n_alertas  morosos_detectados  tasa_moros_topk  lift_vs_base\n",
+      "     1        293                 211            0.720          3.47\n",
+      "     2        587                 430            0.733          3.53\n",
+      "     5       1469                1099            0.748          3.61\n",
+      "    10       2938                1932            0.658          3.17\n",
+      "    20       5877                3090            0.526          2.53\n"
+     ]
+    }
+   ],
+   "source": [
+    "topk_df = topk_gain_table(y_ho, proba_ho, TOP_K_LIST)\n",
+    "topk_df.to_csv(ARTIF_DIR/\"holdout_topk_gain.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b9dc599c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[EV] Mejor umbral por valor económico: thr=0.140 | EV=8976.0 | TP=5578.0 FP=10741.0 FN=519.0 TN=12550.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "ev_grid, best_ev = search_best_ev(y_ho, proba_ho)\n",
+    "ev_grid.to_csv(ARTIF_DIR/\"holdout_ev_grid.csv\", index=False)\n",
+    "pd.DataFrame([best_ev]).to_csv(ARTIF_DIR/\"holdout_best_ev.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4dadee1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting markdown\n",
+      "  Downloading markdown-3.9-py3-none-any.whl.metadata (5.1 kB)\n",
+      "Downloading markdown-3.9-py3-none-any.whl (107 kB)\n",
+      "Installing collected packages: markdown\n",
+      "Successfully installed markdown-3.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dentro de tu venv, si usas uno\n",
+    "!pip install markdown\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0f932d34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[OK] Informe Markdown generado en: artifacts_modelo/informe_modelo.md\n",
+      "[OK] Informe HTML generado en: artifacts_modelo/informe_modelo.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ============================================================\n",
+    "# GENERADOR DE INFORME AUTOMÁTICO (Markdown + opcional HTML)\n",
+    "# ============================================================\n",
+    "import os, io, json\n",
+    "from pathlib import Path\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import joblib\n",
+    "\n",
+    "# Usa el mismo ARTIF_DIR que definiste en el script principal\n",
+    "ARTIF_DIR = Path(\"./artifacts_modelo\")\n",
+    "REPORT_MD  = ARTIF_DIR/\"informe_modelo.md\"\n",
+    "REPORT_HTML= ARTIF_DIR/\"informe_modelo.html\"  # opcional (si tienes 'markdown' instalado)\n",
+    "\n",
+    "# (Opcional) pega aquí tu texto “notas de correlaciones” para que salga en el informe:\n",
+    "NOTAS_CORRELACIONES = \"\"\"\n",
+    "## 📌 Correlaciones y hallazgos rápidos\n",
+    "\n",
+    "- **DiasMora** correlación alta con *PerdidaCartera* (~0.83). Es variable de **estado actual** → no usar como feature predictiva (evitar fuga).\n",
+    "- **Historial de créditos previos**: activos y pagados muestran señal (p. ej., `NumeroCreditosGEstadoActivosPrevius`, `NumeroCreditosLEstadoActivosPrevius`, `NumeroCreditosLPrevius`…).\n",
+    "- **Antigüedades** (meses desde vinculación / primer uso) aportan señal más estable que las fechas crudas.\n",
+    "- **Demografía y cupo** (`Edad`, `CupoAprobado`, `ScoreCrediticio`): correlación negativa moderada → más edad/cupo/score, menos pérdida.\n",
+    "- **Canal/Tipo municipio**: patrón “Virtual > Físico” en pérdida (≈28% vs 16–20%).\n",
+    "- **Género**: leve diferencia; mantener como categórica.\n",
+    "\"\"\"\n",
+    "\n",
+    "def _exists(p): \n",
+    "    try: return Path(p).exists()\n",
+    "    except: return False\n",
+    "\n",
+    "def _read_csv_safe(path):\n",
+    "    try:\n",
+    "        if _exists(path):\n",
+    "            return pd.read_csv(path)\n",
+    "    except Exception as e:\n",
+    "        print(f\"[WARN] No pude leer {path}: {e}\")\n",
+    "    return None\n",
+    "\n",
+    "def _fmt_pct(x, digits=1):\n",
+    "    try: return f\"{100*float(x):.{digits}f}%\"\n",
+    "    except: return \"NA\"\n",
+    "\n",
+    "def _table_md(df, max_rows=20):\n",
+    "    if df is None or len(df)==0:\n",
+    "        return \"_(sin datos)_\"\n",
+    "    df2 = df.copy()\n",
+    "    if len(df2) > max_rows:\n",
+    "        df2 = df2.head(max_rows)\n",
+    "    try:\n",
+    "        return df2.to_markdown(index=False)\n",
+    "    except Exception:\n",
+    "        # por si no está tabulate, devolvemos CSV como fallback\n",
+    "        return \"```\\n\" + df2.to_csv(index=False) + \"```\"\n",
+    "\n",
+    "def _load_bundle():\n",
+    "    bundle_path = ARTIF_DIR/\"modelo_calibrado.joblib\"\n",
+    "    if not _exists(bundle_path):\n",
+    "        print(f\"[WARN] No existe {bundle_path}\")\n",
+    "        return None\n",
+    "    return joblib.load(bundle_path)\n",
+    "\n",
+    "def _infer_dates_from_bundle(bundle):\n",
+    "    # spliteo temporal (cut1/cut2) y experimento ganador almacenados en bundle\n",
+    "    cuts = {}\n",
+    "    try:\n",
+    "        cuts[\"cut1\"] = pd.to_datetime(bundle.get(\"cut1\", None))\n",
+    "        cuts[\"cut2\"] = pd.to_datetime(bundle.get(\"cut2\", None))\n",
+    "    except Exception:\n",
+    "        pass\n",
+    "    best_exp = bundle.get(\"experiment_best\", {})\n",
+    "    return cuts, best_exp\n",
+    "\n",
+    "def _load_key_artifacts():\n",
+    "    return {\n",
+    "        \"metrics\": _read_csv_safe(ARTIF_DIR/\"holdout_metrics.csv\"),\n",
+    "        \"thr_sweep\": _read_csv_safe(ARTIF_DIR/\"holdout_threshold_sweep.csv\"),\n",
+    "        \"topk\": _read_csv_safe(ARTIF_DIR/\"holdout_topk_gain.csv\"),\n",
+    "        \"perm_imp\": _read_csv_safe(ARTIF_DIR/\"permutation_importance_holdout.csv\"),\n",
+    "        \"deciles\": _read_csv_safe(ARTIF_DIR/\"calibracion_deciles_HOLDOUT_final.csv\"),\n",
+    "        \"exp\": _read_csv_safe(ARTIF_DIR/\"experiments_summary.csv\"),\n",
+    "        \"ev_grid\": _read_csv_safe(ARTIF_DIR/\"holdout_ev_grid.csv\"),\n",
+    "        \"ev_best\": _read_csv_safe(ARTIF_DIR/\"holdout_best_ev.csv\"),\n",
+    "    }\n",
+    "\n",
+    "def generar_informe_markdown(extra_notas=NOTAS_CORRELACIONES, export_html=True):\n",
+    "    ARTIF_DIR.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    bundle = _load_bundle()\n",
+    "    cuts, best_exp = _infer_dates_from_bundle(bundle) if bundle else ({}, {})\n",
+    "    artifacts = _load_key_artifacts()\n",
+    "\n",
+    "    # Cabecera\n",
+    "    md = io.StringIO()\n",
+    "    md.write(\"# Informe Automático — Modelo de Riesgo Temu\\n\")\n",
+    "    md.write(\"_Validación temporal estricta (sin fuga)._\\n\\n\")\n",
+    "\n",
+    "    # Resumen corto (tarjeta ejecutiva)\n",
+    "    md.write(\"## 🧾 Resumen ejecutivo\\n\")\n",
+    "    if artifacts[\"metrics\"] is not None:\n",
+    "        met = artifacts[\"metrics\"].set_index(\"metric\")[\"value\"].to_dict()\n",
+    "        md.write(f\"- **ROC-AUC (holdout):** {met.get('ROC_AUC', np.nan):.3f}\\n\")\n",
+    "        md.write(f\"- **PR-AUC (holdout):** {met.get('PR_AUC', np.nan):.3f}\\n\")\n",
+    "        md.write(f\"- **Brier (holdout):** {met.get('Brier', np.nan):.3f}\\n\")\n",
+    "    if best_exp:\n",
+    "        md.write(f\"- **Variante ganadora:** `{best_exp.get('exp','NA')}` | \"\n",
+    "                 f\"PR-AUC(VALID)={best_exp.get('valid_pr_auc', np.nan):.3f} | \"\n",
+    "                 f\"ROC-AUC(VALID)={best_exp.get('valid_roc_auc', np.nan):.3f}\\n\")\n",
+    "    if cuts:\n",
+    "        c1 = cuts.get(\"cut1\", None)\n",
+    "        c2 = cuts.get(\"cut2\", None)\n",
+    "        if c1 is not None and c2 is not None:\n",
+    "            md.write(f\"- **Cortes temporales:** train≤**{str(pd.Timestamp(c1).date())}**, \"\n",
+    "                     f\"valid≤**{str(pd.Timestamp(c2).date())}**, holdout>**{str(pd.Timestamp(c2).date())}**\\n\")\n",
+    "    md.write(\"\\n\")\n",
+    "\n",
+    "    # Experimentos\n",
+    "    md.write(\"## 🔬 Comparativa de experimentos (VALID)\\n\")\n",
+    "    md.write(_table_md(artifacts[\"exp\"]))\n",
+    "    md.write(\"\\n\\n\")\n",
+    "\n",
+    "    # Métricas holdout (detalle)\n",
+    "    md.write(\"## 📈 Métricas en HOLDOUT (final)\\n\")\n",
+    "    md.write(_table_md(artifacts[\"metrics\"]))\n",
+    "    md.write(\"\\n\\n\")\n",
+    "\n",
+    "    # Barrido de umbrales (top 15)\n",
+    "    md.write(\"## 🎯 Barrido de umbrales (clase=1)\\n\")\n",
+    "    md.write(_table_md(artifacts[\"thr_sweep\"], max_rows=15))\n",
+    "    md.write(\"\\n\\n\")\n",
+    "\n",
+    "    # Top-k / Lift\n",
+    "    md.write(\"## 🚀 Ganancia/Lift por Top-k%\\n\")\n",
+    "    md.write(_table_md(artifacts[\"topk\"]))\n",
+    "    md.write(\"\\n\\n\")\n",
+    "\n",
+    "    # EV económico\n",
+    "    md.write(\"## 💰 Valor esperado por umbral\\n\")\n",
+    "    if artifacts[\"ev_best\"] is not None and len(artifacts[\"ev_best\"])>0:\n",
+    "        row = artifacts[\"ev_best\"].iloc[0].to_dict()\n",
+    "        md.write(f\"- **Mejor EV:** thr={row.get('thr','NA')} | EV={row.get('EV','NA')} \"\n",
+    "                 f\"| TP={row.get('TP','NA')} FP={row.get('FP','NA')} FN={row.get('FN','NA')} TN={row.get('TN','NA')}\\n\\n\")\n",
+    "    md.write(_table_md(artifacts[\"ev_grid\"], max_rows=20))\n",
+    "    md.write(\"\\n\\n\")\n",
+    "\n",
+    "    # Calibración por deciles\n",
+    "    md.write(\"## ⚖️ Calibración por deciles\\n\")\n",
+    "    md.write(_table_md(artifacts[\"deciles\"]))\n",
+    "    md.write(\"\\n\\n\")\n",
+    "\n",
+    "    # Importancias por permutación (Top-20)\n",
+    "    md.write(\"## 🔍 Importancias por permutación (Top-20)\\n\")\n",
+    "    imp = artifacts[\"perm_imp\"]\n",
+    "    if imp is not None and \"importance_mean\" in imp.columns:\n",
+    "        imp = imp.sort_values(\"importance_mean\", ascending=False)\n",
+    "    md.write(_table_md(imp, max_rows=20))\n",
+    "    md.write(\"\\n\\n\")\n",
+    "\n",
+    "    # Notas (tu texto de correlaciones / hallazgos)\n",
+    "    if extra_notas and extra_notas.strip():\n",
+    "        md.write(\"## 📝 Notas/lecturas rápidas\\n\")\n",
+    "        md.write(extra_notas.strip() + \"\\n\\n\")\n",
+    "\n",
+    "    # Costeo (desde bundle)\n",
+    "    if bundle and \"costs\" in bundle:\n",
+    "        md.write(\"## ⚙️ Parámetros de costo/beneficio usados\\n\")\n",
+    "        md.write(\"```json\\n\" + json.dumps(bundle[\"costs\"], indent=2) + \"\\n```\\n\\n\")\n",
+    "\n",
+    "    # Guardar MD\n",
+    "    with open(REPORT_MD, \"w\", encoding=\"utf-8\") as f:\n",
+    "        f.write(md.getvalue())\n",
+    "    print(f\"[OK] Informe Markdown generado en: {REPORT_MD}\")\n",
+    "\n",
+    "    # (Opcional) Exportar HTML si tienes instalado 'markdown' (pip install markdown)\n",
+    "    if export_html:\n",
+    "        try:\n",
+    "            import markdown as _md\n",
+    "            html = _md.markdown(md.getvalue(), extensions=[\"tables\"])\n",
+    "            with open(REPORT_HTML, \"w\", encoding=\"utf-8\") as f:\n",
+    "                f.write(f\"<!doctype html><meta charset='utf-8'><style>table{{border-collapse:collapse}}td,th{{border:1px solid #ddd;padding:6px}}</style>{html}\")\n",
+    "            print(f\"[OK] Informe HTML generado en: {REPORT_HTML}\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"[WARN] No se generó HTML (instala 'markdown' si lo quieres): {e}\")\n",
+    "\n",
+    "# Si quieres poder ejecutarlo aparte:\n",
+    "if __name__ == \"__main__\":\n",
+    "    generar_informe_markdown()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecc243f1",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a11be188",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57d722a7",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b499626",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
